Add initial .last-run.json file to track test results status

--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -185,7 +185,7 @@
             </div>
             <div id="uk-filters-details" class="setting-details hidden">
               <div class="info-box">
-                <strong>🇬🇧 Skilled Worker Visa</strong>
+                <strong>Skilled Worker Visa</strong>
                 <ul>
                   <li>New Entrant: £30,960+</li>
                   <li>Experienced: £38,700+</li>
