chore: Add new Hire-logo.svg and update extension icons and popup HTML.

--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -14,8 +14,7 @@
     <!-- Header -->
         <header class="app-header">
       <div class="logo-container">
-        <img src="icons/icon48.png" alt="HireAll Logo" class="logo-icon">
-        <h1 class="logo-text">HireAll</h1>
+        <img src="Hire-logo.svg" alt="HireAll" class="logo-svg" style="height: 28px; width: auto;">
       </div>
       <div class="header-actions">
         <button id="sync-btn" class="icon-btn" title="Sync Data" aria-label="Sync Data">
