feat: Add overlay toggle to extension settings and introduce MicroInteractions section to web homepage.

--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -16,6 +16,16 @@
       <div class="logo-container">
         <img src="Hire-logo.svg" alt="HireAll" class="logo-svg" style="height: 28px; width: auto;">
       </div>
+      
+      <!-- Overlay Toggle - Show/Hide floating buttons on LinkedIn -->
+      <div class="overlay-toggle-container" id="overlay-toggle-container" title="Show/Hide overlay buttons on LinkedIn">
+        <label class="overlay-toggle">
+          <input type="checkbox" id="overlay-toggle" checked>
+          <span class="overlay-toggle-slider"></span>
+          <span class="overlay-toggle-label">Overlay</span>
+        </label>
+      </div>
+      
       <div class="header-actions">
         <button id="sync-btn" class="icon-btn" title="Sync Data" aria-label="Sync Data">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"/><path d="M16 21h5v-5"/></svg>
